Fixes width overflow on viewport

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     flex-wrap: wrap;
     margin: 0;
     width: 100vw;
+    overflow-x: hidden;
 }
 
 header {
